--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,5 +6,8 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    - flash.each do |name, msg|
+      = content_tag :div, msg, :class => "flash #{name}"
     .container
       = yield
+    %footer
