--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -1,7 +1,7 @@
 %h1 All users
 %ul
 - @users.each do |user|
-  %li
+  %li.user
     = user.email
     = link_to 'Delete', user, :method => :delete
   
